--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3549,7 +3549,6 @@ form.ac-form .ac-reply-content input {
   border-radius: 4px;
   border: 1px solid #d2d4d6;
   box-shadow: 0 6px 24px 0 rgba(18, 43, 70, 0.1);
-  overflow: scroll;
   max-height: 70%;
 }
 
@@ -3560,10 +3559,31 @@ form.ac-form .ac-reply-content input {
   height: 34px;
 }
 
+.edit-activity-modal .edit-activity-modal-content #whats-new-content {
+  max-height: 40vh;
+  overflow: auto;
+}
+
 .edit-activity-modal .edit-activity-modal-content #whats-new-toolbar .post-elements-buttons-item a {
   text-decoration: none;
   font-size: 16px;
   line-height: 1.7;
+}
+
+.edit-activity-modal .edit-activity-modal-content #whats-new-toolbar .gif-media-search-dropdown {
+  top: initial;
+  bottom: 30px;
+}
+
+.edit-activity-modal .edit-activity-modal-content #whats-new-toolbar .gif-media-search-dropdown:before {
+  top: initial;
+  bottom: -11px;
+  border-color: transparent transparent #fff #fff;
+}
+
+.edit-activity-modal .edit-activity-modal-content #whats-new-toolbar .gif-media-search-dropdown .gif-search-results {
+  min-height: 30vh;
+  max-height: 30vh;
 }
 
 .edit-activity-modal .edit-activity-modal-close-button {
