Fixed formatting issue in edit activity popup

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
@@ -112,6 +112,7 @@ form.ac-form {
 	.activity-update-form #whats-new-form.activity-form {
 		margin-bottom: 0;
 		border: 0;
+		width: 100%;
 	}
 
 	.edit-activity-modal-content {
@@ -126,7 +127,8 @@ form.ac-form {
 		border-radius: 4px;
 		border: 1px solid #d2d4d6;
 		box-shadow: 0 6px 24px 0 rgba(18, 43, 70, 0.1);
-		max-height: 70%;
+		max-height: 90%;
+		overflow: auto;
 
 		#whats-new-submit input {
 			padding: 0 15px;
@@ -136,7 +138,7 @@ form.ac-form {
 		}
 
 		#whats-new-content {
-			max-height: 40vh;
+			max-height: 230px;
 			overflow: auto;
 		}
 
@@ -167,6 +169,16 @@ form.ac-form {
 
 		}
 
+		#whats-new-attachments {
+
+			.activity-media-container > .dropzone {
+				max-height: 130px;
+				overflow: auto;
+				margin-top: 10px;
+			}
+
+		}
+
 	}
 
 	.edit-activity-modal-close-button {
@@ -176,9 +188,11 @@ form.ac-form {
 		text-align: center;
 		cursor: pointer;
 		border-radius: 3px;
-		position: relative;
-		z-index: 1;
+		position: absolute;
+		z-index: 11;
 		padding: 10px;
+		right: 0;
+		top: 7px;
 
 		.bb-icon {
 			font-size: 22px;
@@ -192,6 +206,22 @@ form.ac-form {
 
 		.activity-update-form #whats-new-content .medium-editor-toolbar {
 			display: block;
+		}
+
+	}
+
+	@media screen and (max-width: 603px) {
+
+		&#buddypress > .activity-update-form .focus-in #whats-new-content .medium-editor-toolbar {
+			bottom: 58px;
+		}
+
+	}
+
+	@media screen and (max-width: 560px) {
+
+		&#buddypress > .activity-update-form .focus-in #whats-new-content .medium-editor-toolbar {
+			bottom: 112px;
 		}
 
 	}
