--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -76,6 +76,24 @@
 		}
 	}
 
+	&.modal-popup {
+		position: fixed;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(250, 251, 253, 0.9);
+		z-index: 999901;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		#whats-new-form {
+			width: 700px;
+			max-width: 90%;
+		}
+	}
+
 	// close @media
 }
 
