--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1086,6 +1086,24 @@ a.layout-grid-view {
   display: inline-block;
 }
 
+.activity-update-form.modal-popup {
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(250, 251, 253, 0.9);
+  z-index: 999901;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.activity-update-form.modal-popup #whats-new-form {
+  width: 700px;
+  max-width: 90%;
+}
+
 #whats-new-toolbar {
   padding: 10px;
 }
