--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -83,6 +83,7 @@
 		width: 100%;
 		height: 100%;
 		background-color: rgba(250, 251, 253, 0.9);
+		box-shadow: 0 6px 24px 0 rgba(18, 43, 70, 0.1);
 		z-index: 999901;
 		display: flex;
 		align-items: center;
