--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1093,6 +1093,7 @@ a.layout-grid-view {
   width: 100%;
   height: 100%;
   background-color: rgba(250, 251, 253, 0.9);
+  box-shadow: 0 6px 24px 0 rgba(18, 43, 70, 0.1);
   z-index: 999901;
   display: flex;
   align-items: center;
