--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -12796,6 +12796,7 @@ ul.bb-albums-list .bb-more-photos strong {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 
 #buddypress #bp-media-single-album .bb-single-album-header #bp-single-album-title {
@@ -12818,10 +12819,6 @@ ul.bb-albums-list .bb-more-photos strong {
 #buddypress #bp-media-single-album .bb-single-album-header p {
   flex-basis: 100%;
   width: 100%;
-}
-
-#buddypress #bp-media-single-album .bb-single-album-header .button.small {
-  line-height: 2;
 }
 
 @media (min-width: 768px) {
