Fixed z-index issue on emoji picker

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -138,6 +138,7 @@
 			bottom: 100%;
 			margin-bottom: 10px;
 			height: 230px;
+			z-index: 999;
 
 			.emojionearea-wrapper {
 				height: 230px;
