Updated scrolling behavior for edit activity popup

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -90,6 +90,7 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
+		padding: 10px 0;
 		background-color: rgba(250, 251, 253, 0.9);
 		box-shadow: 0 6px 24px 0 rgba(18, 43, 70, 0.1);
 		z-index: 999901;
@@ -98,22 +99,11 @@
 		justify-content: center;
 		max-height: 100%;
 		overflow: auto;
-
-		#whats-new-content {
-			max-height: 230px;
-			overflow: auto;
-		}
-
+		
 		#whats-new-form {
 			width: 700px;
 			max-width: 90%;
 			margin: auto;
-		}
-
-		#whats-new-attachments .activity-media-container > .dropzone {
-			max-height: 130px;
-			overflow: auto;
-			margin-top: 10px;
 		}
 
 		.gif-media-search-dropdown {
