Fixed Edit activity popup UI consistency issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -104,6 +104,8 @@
 			width: 700px;
 			max-width: 90%;
 			margin: auto;
+			border: 1px solid #d2d4d6;
+    		box-shadow: 0 6px 24px 0 rgba(18, 43, 70, 0.1);
 		}
 
 		.gif-media-search-dropdown {
